# libelas-win-realsense

./: .gitignore  CMakeLists.txt  README.md
docs/: realsense-flicker-analysis.md  realsense-flicker-solution.md  src-analysis.md
src/: descriptor.cpp  descriptor.h  elas.cpp  elas.h  filter.cpp  filter.h  image.h  image_io.cpp  main.cpp  matrix.cpp  matrix.h  timer.h  triangle.h
